[package]
name = "shuli"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"

[dependencies]
wl-nl80211 = { path = "../netlink/wl-nl80211" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
netlink-packet-core = "0.8"
netlink-packet-generic = "0.4"
genetlink = "0.2"
netlink-proto = "0.12"
netlink-sys = "0.8"

# Crypto
p256 = { version = "0.13", features = ["arithmetic", "hash2curve", "expose-field"] }
aws-lc-rs = "1"

[[bin]]
name = "shulid"
path = "src/main.rs"
